src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: 'Kepler Std';
	src: url('/fonts/KeplerStd-BoldCnDisp.woff2') format('woff2');
	font-style: normal;
	font-weight: 700;
	font-display: swap;
}

@font-face {
	font-family: 'Kepler Std';
	src: url('/fonts/KeplerStd-LightCapt.woff2') format('woff2');
	font-style: normal;
	font-weight: 300;
	font-display: swap;
}

@font-face {
	font-family: 'Kepler Std';
	src: url('/fonts/KeplerStd-MediumScnSubh.woff2') format('woff2');
	font-style: normal;
	font-weight: 500;
	font-display: swap;
}

@font-face {
	font-family: 'National 2';
	src: url('/fonts/national-2-regular.woff2') format('woff2');
	font-style: normal;
	font-weight: 400;
	font-display: swap;
}

@layer base {
	body {
		font-display: swap;
	}

	.light-line {
		outline: 1px solid #edeae9;
	}

	.light-line-strong {
		outline: 1px solid #cfcbcb;
	}

	.active-check {
		background: #3f6ac4;
		outline: 0;
	}

	.light-primary-line,
	.active,
	.focus {
		outline: 2px solid #3f6ac4;
	}

	.dashed {
		outline: 2px dashed #3f6ac4;
	}

	.long-title-background {
		background-color: hsl(220 5% 12% / 0.75);
	}

	.dont-break-out {
		/* These are technically the same, but use both */
		overflow-wrap: break-word;
		word-wrap: break-word;

		word-break: break-word;

		/* Adds a hyphen where the word breaks, if supported (No Blink) */
		hyphens: auto;
	}

	.icon {
		width: 32px;
		height: 32px;
		margin-top: 6px;
		margin-bottom: 16px;
	}

	.kepler-bold {
		font-family: 'Kepler Std';
		font-size: 44px;
		font-weight: 700;
		text-transform: uppercase;
		line-height: 1;
		letter-spacing: 0.25px;
	}

	.kepler-light {
		font-family: 'Kepler Std';
		font-weight: 300;
		line-height: 24px;
	}

	.kepler-medium {
		font-family: 'Kepler Std';
		font-size: 28px;
		font-weight: 500;
		line-height: 32px;
		letter-spacing: -0.45px;
	}

	.national-subheading {
		font-family: 'National 2';
		line-height: 24px;
		font-weight: 400;
		font-size: 10px;
		line-height: 14px;
		text-transform: uppercase;
		letter-spacing: 1.5px;
	}

	.national-sm {
		font-family: 'National 2';
		font-weight: 400;
		font-size: 12px;
		line-height: 16px;
	}
}

